RESOLVED FIXED291676
CSSStyleValue.parseAll with empty value should not hit ASSERT
https://bugs.webkit.org/show_bug.cgi?id=291676
Summary CSSStyleValue.parseAll with empty value should not hit ASSERT
Rob Buis
Reported 2025-04-17 04:32:06 PDT
CSSStyleValue.parseAll with empty value could not hit ASSERT.
Attachments
Rob Buis
Comment 1 2025-04-17 04:33:19 PDT
EWS
Comment 2 2025-04-17 23:56:12 PDT
Committed 293846@main (fa4f2dec9d0d): <https://commits.webkit.org/293846@main> Reviewed commits have been landed. Closing PR #44189 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-04-17 23:57:16 PDT
Note You need to log in before you can comment on or make changes to this bug.