CSSStyleValue.parseAll with empty value should not hit ASSERT https://bugs.webkit.org/show_bug.cgi?id=291676

Reviewed by Anne van Kesteren.

In Debug the handling of empty CSS values can cause ASSERTs to be hit, early exit for this
case in CSSStyleValueFactory::parseStyleValue. Also add a subtest to parseAll-invalid.html to verify no ASSERT
is hit anymore.

* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/stylevalue-objects/parseAll-invalid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/stylevalue-objects/parseAll-invalid.html:
* Source/WebCore/css/typedom/CSSStyleValueFactory.cpp:
(WebCore::CSSStyleValueFactory::extractCustomCSSValues):
(WebCore::CSSStyleValueFactory::parseStyleValue):

Canonical link: https://commits.webkit.org/293846@main